[package]
name = "wordcut-engine"
version = "0.5.0"
edition = "2018"
authors = ["Vee Satayamas <5ssgdxltv@relay.firefox.com>"]
description = "Word segmentation/breaking library"
homepage = "https://github.com/veer66/wordcut-engine"
repository = "https://github.com/veer66/wordcut-engine"
keywords = ["text", "nlp", "library"]
license = "Apache-2.0"

[dependencies]
prefixtree = "0.1.3"
lazy_static = "1.4.0"
serde = "1.0.27"
serde_derive = "1.0.27"
wasm-bindgen = "0.2.69"
anyhow = "1.0"
thiserror = "1.0"
regex-automata = "0.1.10"

[dev-dependencies]
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
