[package]
name = "wordcut-engine"
version = "1.1.7"
edition = "2018"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
description = "Word segmentation/breaking library"
homepage = "https://github.com/veer66/wordcut-engine"
repository = "https://github.com/veer66/wordcut-engine"
keywords = ["text", "nlp", "library"]
license = "Apache-2.0"

[dependencies]
prefixtree = "0.1.3"
lazy_static = "1.4.0"
serde = "1.0.27"
serde_derive = "1.0.27"
wasm-bindgen = "0.2.69"
anyhow = "1.0"
thiserror = "1.0"
regex-automata = "0.1.10"
regex = "1.6"
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
